实现sm4、zuc、cert的ui